FrostWire 1.6.5 - OCTOBER/07/2015
 - Apk search results icon is now an Android.
 - Fixes SoundCloud search.
 - Multiple crash fixes.
 - New Copy Magnet action on transfers.
 - New Copy Infohash action on transfers.

FrostWire 1.6.4 - SEPTEMBER/24/2015
 - New http engine based on okhttp, uses pooled connections, less threads, less memory.
 - Visited previews also marked as visited and remembered during session.
 - Fixes SoundCloud.
 - Fixes KAT search.
 - Fixes BitSnoop search.
 - Browse and manage your .torrent files.
 - Browsing document files now reveals all saved .apk files.
 - Multiple crash fixes on audio player.
 - No more annoying yellow notification messages when removing tracks.
 - UX: My files won't forget your search filter if you overscroll for a refresh.

FrostWire 1.6.3 - SEPTEMBER/06/2015
 - Upgraded Picasso library for image caching.
 - Code/library cleanup.
 - New 'Remove Torrent and Data' action on finished torrent transfers.
 - Clicked search results are marked as visited and remembered during session.
 - jlibtorrent update 1.1.0.7, rebuilt with new swig library, memory optimizations, crashes fixed.
 - Fixes EZTV, BtJunkie search.
 - Fixes issue where torrent downloads would start on 3g/4g disregarding setting.
 - Multiple crash fixes on audio player.

FrostWire 1.6.2 - AUGUST/14/2015
 - Multiple crash fixes on audio player.
 - Updated jlibtorrent library to version 1.1.0.5.
 - Improvement of file type selector look, better layouts for tablets.
 - FrostWire Plus YouTube search fixed.

FrostWire 1.6.1 - AUGUST/10/2015
 - Fixes TorLock search.
 - Crash fixes on libtorrent/jlibtorrent.
 - Considerably faster search source processing.
 - Search engines maintenance fix high cpu usage.
 - Brings back "Send to/Upload" feature. Deleted by mistake.

FrostWire 1.6.0 - AUGUST/03/2015
 - Streaming Previews on search results before download. (FrostWire Plus only)
 - Play .torrent media files while downloading.
 - Upgrade bittorrent engine to jlibtorrent 1.0