@@ -40,7 +40,7 @@ import java.util.*;
 public final class LocalSearchEngine {
 
     private final SearchManager manager;
-    private final PublishSubject<List<SearchResult>> subject;
+    private final PublishSubject<SearchManagerSignal> subject;
 
     // filter constants
     private static final int KAT_MIN_SEEDS_TORRENT_RESULT = 2;
@@ -69,9 +69,12 @@ public final class LocalSearchEngine {
             @Override
             public void call(SearchManagerSignal s) {
                 if (s instanceof SearchManagerSignal.Results) {
-                    onResults(s.token, ((SearchManagerSignal.Results) s).elements);
-                } else {
-                    onFinished(s.token);
+                    onResults((SearchManagerSignal.Results) s);
+                } else if (s instanceof SearchManagerSignal.End) {
+                    // the subject to which we are subscribed (on SearchManagerImpl)
+                    // never sends an onComplete call, it always emits onNext() signals
+                    // so that it won't go to a finalized state.
+                    onFinished((SearchManagerSignal.End) s);
                 }
             }
         });
@@ -81,7 +84,7 @@ public final class LocalSearchEngine {
         this.MIN_SEEDS_TORRENT_RESULT = 10;//ConfigurationManager.instance().getInt(Constants.PREF_KEY_SEARCH_MIN_SEEDS_FOR_TORRENT_RESULT);
     }
 
-    public Observable<List<SearchResult>> observable() {
+    public Observable<SearchManagerSignal> observable() {
         return subject;
     }
 
@@ -138,19 +141,24 @@ public final class LocalSearchEngine {
         return sr != null && opened.contains(sr.uid());
     }
 
-    private void onResults(long token, List<? extends SearchResult> results) {
+    private void onResults(SearchManagerSignal.Results signal) {
+        long token = signal.token;
+        final List<? extends SearchResult> results = signal.elements;
+
         if (token == currentSearchToken) { // one more additional protection
             @SuppressWarnings("unchecked")
             List<SearchResult> filtered = filter(results);
+
             if (!filtered.isEmpty()) {
-                subject.onNext(filtered);
+                subject.onNext(new SearchManagerSignal.Results(token, filtered));
             }
         }
     }
 
-    private void onFinished(long token) {
-        if (token == currentSearchToken) {
+    private void onFinished(SearchManagerSignal.End signal) {
+        if (signal.token == currentSearchToken) {
             searchFinished = true;
+            subject.onNext(signal);
         }
     }
 
